--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write .",
+    "format-check": "prettier --check .",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -15,6 +16,10 @@
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-sonarjs": "^0.23.0",
+    "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   }
 }
