--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npx tsc",
+    "start": "node dist/index.js",
     "prepare": "husky install",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
     "lint": "eslint ."
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "keywords": [],
   "author": "",
